fixed lightbox bug displaying active image on smaller screens

--- a/links/main.css
+++ b/links/main.css
@@ -94,6 +94,23 @@ footer wr a.about:hover { text-decoration: underline; }
 #lightbox.active img { display: block; margin:0px auto; max-height: calc(100vh - 60px); border-radius: 3px }
 
 /*
+ * Bugfix — https://github.com/friederjanmoerman
+ */
+
+/* bug: lightbox displayed image is too large on smaller screens */
+#lightbox {
+  padding: 0;
+}
+#lightbox.active img {
+  max-height: 90%;
+  max-width: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/*
  * Responsive — https://github.com/friederjanmoerman
  */
 
